# chillbtc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  chill
engine/: README.md  pyproject.toml
engine/data/: btc_daily.csv  btc_monthly.csv  btc_weekly.csv
engine/output/: bottom_detector_daily_summary.csv  bottom_detector_summary.csv  cadence_comparison.csv  cadence_comparison.md  cascade_position.csv  cascade_position_strict_r3_def.csv  cascade_position_symmetric.csv  cascade_position_weekly_fee005.csv  cascade_summary.json  cascade_summary_strict_r3_def.json  cascade_summary_symmetric.json  cascade_summary_weekly_fee005.json  dashboard.html  ensemble_signals.csv  ensemble_sweep.csv  entry_only_daily_vs_cascade.csv  entry_only_vs_cascade.csv  export_dashboard.csv  export_gsheet_backtest.csv  fee_sensitivity.csv  figures_index.md  live_journal.csv  mode_comparison.csv  mode_comparison.md  monthly_hodl.csv  phase_c_raw.json  phase_c_results.csv  r1_wf_sensitivity.csv  r1_wf_sensitivity_summary.csv  sl_be_tp_experiment.csv
engine/src/chillbtc/: __init__.py  backtest.py  bottom_detector_experiment.py  build_pages.py  cascade.py  cascade_weekly.py  cli.py  compare_cadence.py  compare_modes.py  dashboard_proto.py  data.py  data_weekly.py  ensemble.py  export_dashboard.py  export_gsheet.py  fee_sensitivity.py  methodology_figures.py  metrics.py  monthly_signal.py  optims.py  phase_b_check.py  phase_c_check.py  r1_wf_sensitivity.py  (+3 more)
engine/tests/: conftest.py  test_cascade.py  test_metrics.py  test_monthly_signal.py  test_rules.py
(+20 files in other folders)
